--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "amqplib": "^0.10.3",
     "apollo-server": "^3.12.0",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
