--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/server": "^4.5.0",
     "amqplib": "^0.10.3",
     "apollo-server": "^3.12.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
