--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@apollo/server": "^4.5.0",
     "amqplib": "^0.10.3",
     "apollo-server": "^3.12.0",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.19",
+    "jsontoxml": "^1.0.1",
     "lodash.merge": "^4.6.2",
     "request-promise": "^4.2.6",
     "request-promise-native": "^1.0.9",
-    "rimraf": "^4.4.0"
+    "rimraf": "^4.4.0",
+    "soap": "^1.0.0",
+    "xml2js": "^0.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
